libnvidia-container (1.9.0~rc.1-1) experimental; urgency=medium

  * Update nvml.h to CUDA 11.6.1 nvML_DEV 11.6.55
  * Update switch statement to include new brands from latest nvml.h
  * Process all --require flags on Jetson platforms
  * Fix long-standing issue with running ldconfig on Debian systems

 -- NVIDIA CORPORATION <cudatools@nvidia.com> Mon, 21 Feb 2022 15:22:52 +0200

libnvidia-container (1.8.1-1) UNRELEASED; urgency=medium

  * Fix bug in determining cgroup root when running in nested containers
  * Fix permission issue when determining cgroup version

 -- NVIDIA CORPORATION <cudatools@nvidia.com> Mon, 14 Feb 2022 09:53:26 +0100

libnvidia-container (1.8.0-1) UNRELEASED; urgency=medium

  * Promote 1.8.0~rc.2-1 to 1.8.0-1
  * Remove amazonlinux1 build targets

 -- NVIDIA CORPORATION <cudatools@nvidia.com> Fri, 04 Feb 2022 06:04:39 +0100

libnvidia-container (1.8.0~rc.2-1) experimental; urgency=medium

  * Include libnvidia-pkcs11.so in compute libraries
  * Include firmware paths in list command
  * Correct GSP firmware mount permissions
  * Fix bug to support cgroupv2 on linux kernels < 5.5
  * Fix bug in cgroupv2 logic when in mixed v1 / v2 environment

 -- NVIDIA CORPORATION <cudatools@nvidia.com> Thu, 27 Jan 2022 11:20:38 +0100

libnvidia-container (1.8.0~rc.1-1) experimental; urgency=medium

  * Add new cgroup.c file based on nvcgo that supports both cgroupv1 and cgroupv2
  * Move cgroup.c to cgroup_legacy.c in preparation for nvcgo implementation
  * Install libnvidia-container-go.so from deps directory
  * Fix DESTDIR for deps make target
  * Create a go-shared library called nvcgo and wrap it in an RPC service
  * Cleanup the nvc_shutdown() path when there is an error in RPC services
  * Move from an nvc_context specific RPC 'driver' service to a global one
  * Generalize RPC mechanism to be instantated multiple times
  * Split RPC mechanism from 'driver' code into standalone RPC mechanism